--- a/cases/ev-demand.html
+++ b/cases/ev-demand.html
@@ -8,8 +8,10 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
   .kpi-number { font-variant-numeric: tabular-nums; }
-  .kpi-card { transition: transform 0.3s; }
+  .kpi-card { transition: transform 0.3s; cursor: default; }
   .kpi-card:hover { transform: scale(1.05); }
+  a { text-decoration: underline; color: rgb(14,165,233); }
+  a:hover { color: rgb(34,197,94); }
 </style>
 </head>
 <body class="bg-slate-50 font-sans text-slate-900">
@@ -17,7 +19,9 @@
 <header class="max-w-6xl mx-auto px-6 py-10 text-center">
   <h1 class="text-4xl font-black mb-2">EV Demand Forecast – Germany</h1>
   <p class="text-slate-600 max-w-3xl mx-auto">
-    Optimizing regional inventory and forecast accuracy using SQL, Power BI & scenario simulations.
+    The rapid adoption of electric vehicles in Germany creates regional supply imbalances. 
+    Some areas have excess stock while others face shortages, increasing operational costs and delaying deliveries.
+    We analyzed historical sales and registration data to optimize inventory allocation, improve forecast accuracy, and accelerate decision-making.
   </p>
   <a href="../index.html" class="text-emerald-600 hover:underline mt-4 inline-block">← Back to Portfolio</a>
 </header>
@@ -28,11 +32,8 @@
   <section class="bg-white p-6 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold mb-4">Problem</h2>
     <p>
-      In Hamburg, for example, stock levels were 20 vehicles while orders reached 50. This caused additional procurement costs, delayed deliveries, and reduced customer satisfaction.
-      Similar imbalances existed in other regions: excess inventory in some, insufficient stock in others.
-    </p>
-    <p>
-      The challenge: how to optimize inventory allocation across regions to minimize costs and meet demand accurately.
+      Example: In Hamburg, stock was 20 vehicles vs. 50 orders, causing delays and extra costs. 
+      Similar imbalances existed elsewhere. The goal: optimize inventory, improve forecast accuracy, and enable rapid data-driven decisions.
     </p>
   </section>
 
@@ -40,34 +41,17 @@
   <section class="bg-white p-6 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold mb-4">Data Sources & Cleaning</h2>
     <ul class="list-disc list-inside space-y-2">
-      <li>AutoScout24: EV sales & listing data</li>
-      <li>ZSW Electromobility: Regional EV registration & trend data</li>
-      <li>Total dataset: 2.3M rows (cleaned with SQL: duplicates removed, nulls fixed, dates normalized)</li>
+      <li><a href="https://www.autoscout24.com/" target="_blank">AutoScout24</a>: EV sales & listing data</li>
+      <li><a href="https://www.zsw-bw.de/en/media-center/data-service.html" target="_blank">ZSW Electromobility</a>: Regional EV registration & trends</li>
+      <li>Total dataset: 2.3M rows, cleaned via SQL (duplicates removed, nulls fixed, dates normalized)</li>
     </ul>
   </section>
 
-  <!-- Approach -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Approach & Recommendations</h2>
-    <ul class="list-disc list-inside space-y-2">
-      <li>Analyzed historical sales per region to forecast demand.</li>
-      <li>Created region-wise simulation in Power BI to optimize inventory allocation.</li>
-      <li>Implemented scenario testing: e.g., demand ±10%, stock adjustment slider.</li>
-      <li>Provided weekly operational updates to ensure real-time decision-making.</li>
-    </ul>
-  </section>
-
-  <!-- Implementation -->
-  <section class="bg-white p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-bold mb-4">Implementation</h2>
-    <p>
-      Power BI dashboard displays:
-      <ul class="list-disc list-inside mt-2 ml-6">
-        <li>Forecast vs Actual demand per region</li>
-        <li>Inventory levels Before/After optimization</li>
-        <li>Interactive sliders for scenario simulation</li>
-      </ul>
-    </p>
+  <!-- Slider -->
+  <section class="bg-white p-6 rounded-2xl shadow-lg text-center">
+    <h2 class="text-2xl font-bold mb-4">Demand Scenario Simulation</h2>
+    <input type="range" id="demandSlider" min="-20" max="20" value="0" step="1" class="w-full">
+    <p class="mt-2 text-slate-600">Adjust forecast ±%: <span id="sliderValue">0</span>%</p>
   </section>
 
   <!-- Charts -->
@@ -94,13 +78,13 @@
       <h4 class="font-bold text-xl mb-1">Forecast Error</h4>
       <p class="text-blue-600 text-3xl font-black kpi-number" data-target="22">0</p>
       <p class="text-sm text-slate-500">%</p>
-      <p class="text-slate-500 text-xs mt-1">Difference between predicted vs actual demand reduced by analyzing historical data</p>
+      <p class="text-slate-500 text-xs mt-1">Difference between predicted vs actual demand reduced by historical data analysis</p>
     </div>
     <div class="kpi-card bg-yellow-50 p-6 rounded-2xl shadow">
       <h4 class="font-bold text-xl mb-1">Decision Speed</h4>
       <p class="text-yellow-600 text-3xl font-black kpi-number" data-target="15">0</p>
       <p class="text-sm text-slate-500">%</p>
-      <p class="text-slate-500 text-xs mt-1">Faster decisions via interactive dashboards and scenario simulation</p>
+      <p class="text-slate-500 text-xs mt-1">Faster decisions via interactive dashboard and scenario simulation</p>
     </div>
     <div class="kpi-card bg-purple-50 p-6 rounded-2xl shadow">
       <h4 class="font-bold text-xl mb-1">Regions Optimized</h4>
@@ -112,28 +96,30 @@
 </main>
 
 <script>
-// KPI counter animation
+// KPI animation
 function animateKPI(){
   const counters = document.querySelectorAll('.kpi-number');
   counters.forEach(counter=>{
     const target = +counter.getAttribute('data-target');
     let count = 0;
-    const increment = Math.abs(target) / 50;
+    const increment = Math.abs(target)/50;
     const isNegative = target < 0;
     const interval = setInterval(()=>{
       count += increment;
-      if(count >= Math.abs(target)){ counter.textContent = isNegative ? `-${Math.round(Math.abs(target))}` : Math.round(target); clearInterval(interval);}
-      else counter.textContent = isNegative ? `-${Math.round(count)}` : Math.round(count);
+      if(count >= Math.abs(target)){
+        counter.textContent = isNegative ? `-${Math.round(Math.abs(target))}` : Math.round(target);
+        clearInterval(interval);
+      } else counter.textContent = isNegative ? `-${Math.round(count)}` : Math.round(count);
     },30);
   });
 }
 animateKPI();
 
-// Chart.js charts
+// Forecast vs Actual
 const evCtx = document.getElementById('evChart').getContext('2d');
-new Chart(evCtx, {
-    type: 'line',
-    data: {
+const evChart = new Chart(evCtx, {
+    type:'line',
+    data:{
         labels:["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug"],
         datasets:[
             {label:"Forecast", data:[120,150,180,240,300,360,400,420], borderColor:"rgb(34,197,94)", fill:false, tension:0.2},
@@ -143,17 +129,47 @@ new Chart(evCtx, {
     options:{responsive:true, plugins:{legend:{position:'top'}, tooltip:{mode:'index', intersect:false}}}
 });
 
+// Regional Inventory with Before/After simulation
 const invCtx = document.getElementById('inventoryChart').getContext('2d');
-new Chart(invCtx,{
+const inventoryData = {
+    labels:["Hamburg","Berlin","North","South","East","West"],
+    datasets:[
+        {label:"Before", data:[20,30,50,40,35,25], backgroundColor:"rgba(239,68,68,0.5)"},
+        {label:"After", data:[50,35,45,42,37,27], backgroundColor:"rgba(34,197,94,0.6)"}
+    ]
+};
+const inventoryChart = new Chart(invCtx,{
     type:'bar',
-    data:{
-        labels:["Hamburg","Berlin","North","South","East","West"],
-        datasets:[
-            {label:"Before", data:[20,30,50,40,35,25], backgroundColor:"rgba(239,68,68,0.5)"},
-            {label:"After", data:[50,35,45,42,37,27], backgroundColor:"rgba(34,197,94,0.6)"}
-        ]
-    },
-    options:{responsive:true, plugins:{legend:{position:'top'}, tooltip:{mode:'index'}}}
+    data: inventoryData,
+    options:{
+        responsive:true,
+        plugins:{
+            legend:{position:'top'},
+            tooltip:{
+                callbacks:{
+                    label:function(context){
+                        const value = context.parsed.y;
+                        const before = inventoryData.datasets[0].data[context.dataIndex];
+                        const after = inventoryData.datasets[1].data[context.dataIndex];
+                        return `${context.dataset.label}: ${value} vehicles | Before: ${before}, After: ${after}`;
+                    }
+                }
+            }
+        },
+        animation:{duration:800}
+    }
+});
+
+// Slider simulation
+const slider = document.getElementById('demandSlider');
+const sliderValue = document.getElementById('sliderValue');
+
+slider.addEventListener('input', ()=>{
+    const percent = +slider.value;
+    sliderValue.textContent = percent;
+    const baseForecast = [120,150,180,240,300,360,400,420];
+    evChart.data.datasets[0].data = baseForecast.map(v => v * (1 + percent/100));
+    evChart.update();
 });
 </script>
 
